--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -80,7 +80,7 @@
 
 @media(max-width:600px){
   .input-wrapper{
-    max-width:150px ;
+    max-width:180px ;
   }
   .heading-container h3{
     font-size: medium;
@@ -88,18 +88,21 @@
   .heading-container .logo{
     height: 22px;
   }
+  .button ,.login{
+    margin-right: 3px;
+    padding: 5px;
+  }
 }
 
 @media(max-width:500px){
   .input-wrapper{
-    max-width:80px ;
+    max-width:130px ;
   }
 }
 
 @media(max-width:400px){
   .input-wrapper{
-    max-width:50px ;
+    max-width:80px ;
+    height: 1.5rem;
   }
 }
-
-
